--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "slim/slim": "^3.8",
-    "doctrine/orm": "^2.5"
+    "doctrine/orm": "^2.5",
+    "oscarotero/psr7-middlewares": "^3.20"
   },
   "autoload": {
     "psr-4": {
