--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "slim/slim": "^3.8",
     "doctrine/orm": "^2.5",
-    "oscarotero/psr7-middlewares": "^3.20"
+    "oscarotero/psr7-middlewares": "^3.20",
+    "monolog/monolog": "^1.22"
   },
   "autoload": {
     "psr-4": {
