--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
     "slim/slim": "^3.8",
     "doctrine/orm": "^2.5",
     "oscarotero/psr7-middlewares": "^3.20",
-    "monolog/monolog": "^1.22"
+    "monolog/monolog": "^1.22",
+    "tuupola/slim-jwt-auth": "^2.3",
+    "tuupola/slim-basic-auth": "^2.2",
+    "firebase/php-jwt": "^4.0",
+    "akrabat/rka-scheme-and-host-detection-middleware": "^0.3.0"
   },
   "autoload": {
     "psr-4": {
